--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-12-16  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* libltdl/Makefile.am (ACLOCAL): Define with `-I .', as in
+	bootstrap.
+
 1999-12-15  Thomas Tanner  <tanner@ffii.org>
 
 	* libltdl/configure.in: path to auxiliary files can be specified
