--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -3061,20 +3061,19 @@ objects to your package, or else which flavor of libltdl you want to use:
 a convenience library or an installable libtool library.
 
 The most simplistic way to add @code{ltdl} to your package is to copy
-the source files, @file{ltdl.c} and @file{ltdl.h}, to a source
-directory withing your package and to build and link them along with
-the rest of your sources.  To help you do this, the m4 macros for
-autoconf are available in @file{ltdl.m4}.  You must ensure that they
-are available in @file{aclocal.m4} before you run autoconf -- either
-by copying @file{ltdl.m4} to the macro directory of your package (if
-you have one) before running aclocal, or else @code{cat}ting its contents
-directly to the end of @file{aclocal.m4} if you are not using automake.
-Having made the macros available, you must add a call to the
-@samp{AC_LIB_LTDL} macro to your package's @file{configure.in} to perform
-the configure time checks required to build @file{ltdl.o} correctly.
-This method has problems if you then try to link the package binaries
-with an installed libltdl, or a library which depends on libltdl, which
-will cause problems with multiple symbol definitions.
+the source files, @file{ltdl.c} and @file{ltdl.h}, to a source directory
+withing your package and to build and link them along with the rest of
+your sources.  To help you do this, the m4 macros for autoconf are
+available in @file{ltdl.m4}.  You must ensure that they are available in
+@file{aclocal.m4} before you run autoconf -- by appending the contents
+of @file{ltdl.m4} to @file{acinclude.m4}, if you are using automake, or
+to @file{aclocal.m4} if you are not.  Having made the macros available,
+you must add a call to the @samp{AC_LIB_LTDL} macro to your package's
+@file{configure.in} to perform the configure time checks required to
+build @file{ltdl.o} correctly.  This method has problems if you then try
+to link the package binaries with an installed libltdl, or a library
+which depends on libltdl: you may have problems with duplicate symbol
+definitions.
 
 One advantage of the convenience library is that it is not installed, so
 the fact that you use libltdl will not be apparent to the user, and it
