* ltmain.in (libtool_args): Get all arguments properly enclosed in quotes and backslash-protected when needed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-12-18  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* ltmain.in (libtool_args): Get all arguments properly enclosed in
+	quotes and backslash-protected when needed.
+
 1999-12-16  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
 	* ltdl.m4: Renamed from...
