* ltmain.in (-Wl, -Wc): Make commas argument separators, just like in gcc.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-12-18  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
+	* ltmain.in (-Wl, -Wc): Make commas argument separators, just like
+	in gcc.
+	
 	* ltmain.in (libtool_args): Get all arguments properly enclosed in
 	quotes and backslash-protected when needed.
 
