--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 1999-12-18  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
+	* ltmain.in: Oops, `largarg' -> `lastarg'.
+
 	* ltmain.in (-Wc, -Xcompiler): Implemented in compile mode.
-	
+
 	* ltmain.in (-Xcompiler, -Xlinker): Add to compile_command and
 	finalize_command.
 	(-Wc, -Wl): Likewise.
