--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-01-14  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
+	* ltconfig.in (Usage): Now it matches the code!
+	Reported by Jon Leichter <jon@symas.com>
+
 	* README:  Some notes about libtool release numbers.
 
 	* mdemo/README: Explain the deliberate incompleteness of the
@@ -24,6 +27,7 @@
 
 	* ltconfig.in (opt_cr, mingw*): replace unescaped ? with correctly
 	escaped and portable \{0,1\} in sed expression.
+	From Jon Leichter <jon@symas.com>
 
 2000-01-13  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
