--- a/NEWS
+++ b/NEWS
@@ -1,16 +1,20 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
-* libltdl can now be built as a dll with win32.
-* m4 macros needed to configure libltdl split out into libltdl/ltdl.m4.
-* Start of support code for cross-compiling to win32.
-* Improved support for mingw32.
-* Improved support for Compaq Tru64 V5.0, and Digital Unix V4.*.
 * New "-no-install" flag to avoid the use of executable wrapper scripts.
 * New --with-pic flag to control the generation of PIC/non-PIC code.
 * New --build flag to ltconfig to help with build cross compilation
   environments is inherited from --build flag passed to configure.
-* Various bugfixes
+* Support for hardcoding run-time paths (-R) into libraries.
+* Libtool now allows you to link shared libraries against static code.
+* New functions lt_dlgetdata, lt_dlsetdata, lt_dlgetinfo, lt_dlforeach
+  in libltdl can be used to store application specific data in handles.
+* "-Xcompiler" and "-Wc," does now work in compile mode, too.
+* Start of support code for cross-compiling to win32.
+* libltdl can now be built as a dll with win32.
+* m4 macros needed to configure libltdl split out into libltdl/ltdl.m4.
+* Improved support for mingw32, Compaq Tru64 V5.0 and Digital Unix V4.*.
+* Many bugfixes (especially in libltdl)
 
 New in 1.3.4: 1999-12-08, CVS version 1.3.3a, Libtool team:
 * Support for Compaq Tru64 V5.0.
